cmake_minimum_required(VERSION 3.19)
project(advent_of_code_2021)

set(CMAKE_CXX_STANDARD 17)

add_executable(template template.cpp)
add_executable(d1 d1.cpp)
add_executable(d2 d2.cpp)
add_executable(d3 d3.cpp)
add_executable(d4 d4.cpp)
add_executable(d5 d5.cpp)
add_executable(d6 d6.cpp)
add_executable(d7 d7.cpp)
add_executable(d8 d8.cpp)
add_executable(d9 d9.cpp)
add_executable(d10 d10.cpp)
add_executable(d11 d11.cpp)
add_executable(d12 d12.cpp)
add_executable(d13 d13.cpp)
add_executable(d14 d14.cpp)
add_executable(d15 d15.cpp)
add_executable(d16 d16.cpp)